[package]
name = "height-map-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "height-map-test"
path = "src/main.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
